# tavern

./: .bazelignore  .bazelproject  .bazelrc  .bumpversion.cfg  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .prospector.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  BAZEL.md  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  GRAPHQL_MIGRATION_PLAN.md  LICENSE  MANIFEST.in  MODULE.bazel  README.md  README.rst  TAVERN_IMPROVEMENT_REPORT.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  X.patch  audit_pytest_marks.py  change-starlark-script.md  claude_desktop_config.json  constraints.txt  coverage.sh  docker-compose.yaml  gazelle_python.yaml  (+25 more)
bazel/: 0001-don-t-run-test-by-default.patch  BUILD.bazel  docker-compose.yaml  images.bzl  integration_main.py  lint.bzl  load_image.py  pytest_main.py  tavern_test.bzl
bazelutil/: BUILD.bazel  gazelle.bzl  integration_main.py  skaffold.bzl  tavern_test.bzl
example/advanced/: BUILD.bazel  Dockerfile  advanced.md  common.yaml  docker-compose.yaml  server.py  test_server.tavern.yaml  testing_utils.py
example/components/: BUILD.bazel  Dockerfile  common.yaml  components.md  docker-compose.yaml  logs.out  server.py  test_hello.tavern.yaml  test_ping.tavern.yaml
example/cookies/: BUILD.bazel  Dockerfile  common.yaml  cookies.md  docker-compose.yaml  server.py  test_server.tavern.yaml
example/custom_backend/: .gitignore  README.md  pyproject.toml  run_tests.sh  test_file_touched.tavern.yaml  tests.bats
example/graphql/: .dockerignore  Dockerfile  README.md  __init__.py  conftest.py  docker-compose.yaml  graphql_config.yaml  multiple_operations.graphql  pyproject.toml  server.py  test_auth.tavern.yaml  test_basic_query.tavern.yaml  test_errors.tavern.yaml  test_multiple_operations.tavern.yaml  test_mutations.tavern.yaml  test_server.py  test_subscriptions.tavern.yaml  test_variables.tavern.yaml
example/grpc/: .dockerignore  Dockerfile  README.md  common.yaml  conftest.py  docker-compose.yaml  helloworld.proto  helloworld_pb2.py  helloworld_pb2.pyi  helloworld_pb2_grpc.py  helloworld_v1_precompiled.proto  helloworld_v1_precompiled_pb2.py  helloworld_v1_precompiled_pb2.pyi  helloworld_v1_precompiled_pb2_grpc.py  helloworld_v2_compiled.proto  helloworld_v2_compiled_pb2.py  helloworld_v2_compiled_pb2_grpc.py  helloworld_v3_reflected.proto  helloworld_v3_reflected_pb2.py  helloworld_v3_reflected_pb2_grpc.py  pyproject.toml  regenerate.sh  server.Dockerfile  server.py  test_grpc.tavern.yaml
example/grpc_web/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
example/hooks/: BUILD.bazel  Dockerfile  conftest.py  docker-compose.yaml  server.py  test_server.tavern.yaml
example/http/: .dockerignore  Dockerfile  pyproject.toml
example/mqtt/: .dockerignore  BUILD.bazel  README.md  common.yaml  conftest.py  docker-compose.yaml  fluent.conf  listener.Dockerfile  listener.py  mosquitto.conf  mosquitto_passwd  pyproject.toml  server.Dockerfile  server.py  test_mqtt.tavern.yaml  test_mqtt_failures.tavern.yaml  testing_utils.py
example/simple/: BUILD.bazel  Pipfile  logs.out  server.py  test_comparisions.tavern.yaml  test_server.tavern.yaml
support/: BUILD.bazel  split_test_names.py
support/private/: BUILD.bazel  BUILD.sdk.bazel  BUILD.sdk.bzl
support/rules/: BUILD.bazel  pytest_generate.bzl  python_sdk.bzl
tavern/: BUILD  BUILD.bazel  __init__.py  core.py  entry.py  helpers.py  mqtt.py  plugins.py  printer.py  request.py  response.py
tavern/_core/: BUILD.bazel  asyncio.py  cel.py  dict_util.py  exceptions.py  extfunctions.py  files.py  formatted_str.py  general.py  jmesutils.py  loader.py  plugins.py  pydantic_models.py  report.py  run.py  skip.py  stage_lines.py  strict_util.py  strtobool.py  testhelpers.py  tincture.py  types.py
tavern/_plugins/: BUILD.bazel
tavern/bazelutil/: BUILD.bazel  __init__.py  integration_main.py  load_image.py  tavern_test.bzl
tavern/internal/: BUILD.bazel  testutil.py
tavern/request/: BUILD.bazel  __init__.py  base.py  mqtt.py  rest.py
tavern/response/: BUILD.bazel  __init__.py  base.py  mqtt.py  rest.py
tavern/schemas/: BUILD  BUILD.bazel  extensions.py  files.py  jsonschema.py  tests.jsonschema.yaml  tests.schema.yaml
tavern/testutils/: BUILD.bazel  helpers.py  jmesutils.py  locust.py  newhooks.py  pytesthook.py
tavern/util/: BUILD.bazel  allure.py  bazel.py  delay.py  dict_util.py  env_vars.py  exceptions.py  extfunctions.py  formatted_str.py  general.py  jmespath_util.py  keys.py  loader.py  python_2_util.py  report.py  retry.py  stage_lines.py  strict_util.py  testutils.py  tincture.py
tests/: BUILD  BUILD.bazel  conftest.py  logging.yaml  test_core.py  test_helpers.py  test_mqtt.py  test_request.py  test_response.py
tests/integration/: 881_1.json  881_2.yaml  BUILD.bazel  Dockerfile  README.md  common.yaml  conftest.py  docker-compose.yaml  expected_table.txt  expected_wrong.txt  ext_functions.py  extra.yaml  gentest.bzl  global_cfg.yaml  integration_main.py  parametrize_includes.yaml  server.py  test_allure.tavern.yaml  test_auth_key.tavern.yaml  test_certs.tavern.yaml  test_control_flow.tavern.yaml  test_cookie_remember.tavern.yaml  test_cookies.tavern.yaml  test_cookies.yaml  test_data_key.tavern.yaml  test_env_var_format.tavern.yaml  test_error.tavern.yaml  test_external_functions.tavern.yaml  test_files.tavern.yaml  test_fixtures.tavern.yaml  test_follow_redirects.tavern.yaml  test_format.tavern.yaml  test_formencoded.tavern.yaml  test_header_comparisons.tavern.yaml  test_helpers.tavern.yaml  test_hooks.tavern.yaml  test_include.tavern.yaml  test_jmes.tavern.yaml  test_jsonpath.tavern.yaml  test_markers.tavern.yaml  (+20 more)
tests/response/: test_mqtt_response.py  test_rest.py
tests/unit/: BUILD.bazel  conftest.py  gentest.bzl  test_call_run.py  test_control_flow_guard.py  test_core.py  test_extensions.py  test_files.py  test_global_tinctures.py  test_helpers.py  test_marks.py  test_mqtt.py  test_pydantic_models.py  test_pytest_hooks.py  test_request.py  test_schema.py  (+4 more)
(+255 files in other folders)
