load("@rules_python//python:defs.bzl", "py_library")
load("@tavern_pip//:requirements.bzl", "requirement")

exports_files(["pytest.ini"])

py_library(
    name = "tavern",
    srcs = ["docs/source/conf.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@tavern_pip_recommonmark//:pkg",
        "@tavern_pip_sphinx_rtd_theme//:pkg",
    ],
)

load("@rules_python//python:packaging.bzl", "py_wheel")

py_wheel(
    name = "tavern_wheel",
    author = "Michael Boulton",
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Framework :: Pytest",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Utilities",
        "Topic :: Software Development :: Testing",
        "License :: OSI Approved :: MIT License",
    ],
    console_scripts = {"tavern-ci": "tavern.entry:main"},
    description_file = "README.rst",
    distribution = "tavern",
    entry_points = {
        "console_scripts": ["tavern-ci = tavern.entry:main"],
        "pytest11": ["tavern = tavern.testutils.pytesthook"],
        "tavern_http": ["requests = tavern._plugins.rest.tavernhook:TavernRestPlugin"],
        "tavern_mqtt": ["paho-mqtt = tavern._plugins.mqtt.tavernhook"],
    },
    homepage = "https://taverntesting.github.io/",
    license = "MIT",
    python_tag = "py3",
    version = "1.11.1",
    visibility = ["//visibility:public"],
    deps = [
        ":tavern",
    ],
)

# gazelle:lang py
# gazelle:exclude bazel-*
# gazelle:exclude build
# gazelle:exclude dist
# gazelle:exclude example
# gazelle:exclude .git
# gazelle:exclude .github
# gazelle:exclude .idea
# gazelle:exclude .ijwb
# gazelle:exclude .pytest_cache
# gazelle:exclude .run
# gazelle:exclude scripts
# gazelle:exclude tavern.egg-info
# gazelle:exclude .tox

# bazel run --run_under "cd $PWD && " @bazel_buildtools//buildozer 'substitute deps @tavern_pip//pypi__([^/]+) @tavern_pip_${1}//:pkg' //...:*

alias(
    name = "gazelle",
    actual = "//bazelutil:gazelle",
)
