[metadata]
name = tavern
description = Simple testing of RESTful APIs
version = attr: tavern.__version__
long_description = file: README.rst
author = Michael Boulton
author_email = boulton@zoetrope.io
url = https://taverntesting.github.io/

license = MIT
license_file = LICENSE

keywords =
    testing
    pytest
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Pytest
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities
    Topic :: Software Development :: Testing
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True

install_requires =
    PyYAML==5.3
    pykwalify==1.7.0
    requests==2.22.0
    pyjwt==1.7.1
    pylint==2.4.4
    python-box==4.0.4
    stevedore==1.31.0
    paho-mqtt==1.3.1
    jmespath==0.9.4
    pytest>=5,<6

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    tavern-ci = tavern.entry:main
pytest11 =
    tavern = tavern.testutils.pytesthook

tavern_http =
    requests = tavern._plugins.rest.tavernhook:TavernRestPlugin
tavern_mqtt =
    paho-mqtt = tavern._plugins.mqtt.tavernhook

[aliases]
test=pytest
