[metadata]
name = tavern
description = Simple testing of RESTful APIs
version = attr: tavern.__version__
long_description = file: README.rst
author = Michael Boulton
author_email = boulton@zoetrope.io
url = https://taverntesting.github.io/

license = MIT
license_file = LICENSE

keywords =
    testing
    pytest
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Pytest
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: Software Development :: Testing
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True

install_requires =
    PyYAML>=5.3.1,<6
    pykwalify>=1.8.0,<2
    requests>=2.22.0,<3
    pyjwt>=2,<3
    paho-mqtt>=1.3.1,<=1.5.1
    jmespath<1
    pytest>=6.2,<7
    python-box>4,<6
    stevedore~=3.3.0
    jsonschema~=3.2.0

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    tavern-ci = tavern.entry:main
pytest11 =
    tavern = tavern._core.pytest

tavern_http =
    requests = tavern._plugins.rest.tavernhook:TavernRestPlugin
tavern_mqtt =
    paho-mqtt = tavern._plugins.mqtt.tavernhook

[aliases]
test=pytest
