[metadata]
name = tavern
description = Simple testing of RESTful APIs
version = attr: tavern.__version__
long_description = file: README.rst
author = Michael Boulton
author_email = boulton@zoetrope.io
url = https://taverntesting.github.io/
project_urls =
    Documentation = https://tavern.readthedocs.io/en/latest/
    Source = https://github.com/taverntesting/tavern

license = MIT
license_file = LICENSE

keywords =
    testing
    pytest
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Pytest
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: Software Development :: Testing
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True

install_requires =
    PyYAML>=5.3.1,<7
    attrs>=20.3.0,<=21.4.0
    jmespath<1
    jsonschema~=3.2.0
    paho-mqtt>=1.3.1,<=1.5.1
    pyjwt>=2.4.0,<3
    pykwalify>=1.8.0,<2
    pytest>=6.2,<8
    python-box>4,<6
    requests>=2.22.0,<3
    stevedore>=3.5.2,<4

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    tavern-ci = tavern.entry:main
pytest11 =
    tavern = tavern._core.pytest

tavern_http =
    requests = tavern._plugins.rest.tavernhook:TavernRestPlugin
tavern_mqtt =
    paho-mqtt = tavern._plugins.mqtt.tavernhook

[aliases]
test=pytest
