load("@rules_python//python:defs.bzl", "py_library")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")

container_image(
    name = "py3_base_image",
    base = "@py3_debug_image_base//image",
    env = {
        "PYTHONUNBUFFERED": "0",
        "FLASK_DEBUG": "1",
    },
    visibility = ["//:__subpackages__"],
)

exports_files([
    "integration_main.py",
])

py_library(
    name = "bazelutil",
    srcs = [
        "__init__.py",
        "integration_main.py",
    ],
    imports = [".."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern/testutils",
        "//tavern/util",
        "@tavern_pip//pypi__pytest",
    ],
)
