load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "tavern",
    srcs = [
        "__init__.py",
        "core.py",
        "entry.py",
        "helpers.py",
        "request.py",
        "response.py",
    ],
    imports = [".."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern/_core",
        "//tavern/_core/pytest",
        "//tavern/_core/schema",
        "@tavern_pip//jmespath",
        "@tavern_pip//pyjwt",
        "@tavern_pip//pytest",
        "@tavern_pip//python_box",
        "@tavern_pip//requests",
    ],
)
