load("@rules_python//python:defs.bzl", "py_library")
load("@tavern_pip//:requirements.bzl", "requirement")

py_library(
    name = "tavern",
    srcs = [
        "__init__.py",
        "core.py",
        "entry.py",
        "helpers.py",
        "request.py",
        "response.py",
    ],
    imports = [".."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern/_core",
        "//tavern/_core/pytest",
        "//tavern/_core/schema",
        requirement("jmespath"),
        requirement("pyjwt"),
        requirement("pytest"),
        requirement("python_box"),
        requirement("requests"),
    ],
)
